--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,7 +10,6 @@
 }
 @media only screen and (min-width: 1024px) {
   .footer {
-    padding-bottom: 4.5rem;
     padding-top: 4.5rem;
     display: flex;
   }
@@ -31,7 +30,7 @@
     gap: 0;
     padding: 28px 64px 28px 0;
     margin-left: 40px;
-    border-right: 0.06rem solid lightslategrey;
+    border-right: 0.0625rem solid #cdced9;
   }
 }
 @media only screen and (min-width: 1440px) {
@@ -72,7 +71,7 @@
   padding-top: 2.265rem;
   column-count: 2;
   margin: 0 20px;
-  border-top: 0.06rem solid lightslategrey;
+  border-top: 0.0625rem solid #cdced9;
 }
 @media only screen and (min-width: 1024px) {
   .footer__locations {
@@ -188,10 +187,13 @@ header li a {
   color: #fff;
   text-decoration: none;
   font-size: 1.5rem;
+  letter-spacing: 0.125rem;
+  line-height: 1.25;
 }
 
 .navbar {
   min-height: 70px;
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -205,10 +207,26 @@ header li a {
   align-items: center;
   gap: 60px;
 }
+.navbar svg {
+  fill: #fff;
+}
 .navbar__contact {
   display: flex;
   width: 70px;
   justify-content: space-between;
+}
+@media screen and (min-width: 768px) {
+  .navbar__contact {
+    width: 80px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .navbar__contact {
+    width: 160px;
+  }
+  .navbar__contact svg {
+    display: none;
+  }
 }
 
 .hamburger {
@@ -268,4 +286,46 @@ header li a {
 }
 .nav-menu__sub-menu {
   display: none;
+}
+
+.nav-menu__sub-menu.active {
+  display: block;
+}
+
+.sub-link {
+  font-size: 1rem;
+}
+
+.contact-link {
+  display: block;
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .contact-link {
+    display: block;
+    background-color: #e3f307;
+    border: 0.0625rem solid #e3f307;
+    color: #0020f6;
+    text-decoration: none;
+    padding: 8px 40px;
+    font-weight: bold;
+    font-size: 12px;
+    border-radius: 4px;
+    letter-spacing: 2px;
+    padding: 0.5rem;
+    text-transform: uppercase;
+  }
+  .contact-link:hover {
+    background-color: #0020f6;
+    border: 1px solid #e3f307;
+    color: #e3f307;
+  }
+}
+
+.hamburger__inner .bar:nth-child(1) {
+  rotate: 90deg;
+  transform: translateX(7px);
+}
+.hamburger__inner.active .bar:nth-child(1) {
+  opacity: 0;
 }
