--- a/styles/abstracts/_colors.scss
+++ b/styles/abstracts/_colors.scss
@@ -5,4 +5,5 @@ $navy-blue: rgb(0, 32, 246);
 $navy-blue-dark: rgb(0, 17, 134);
 $lightgrey: #f5f5f5;
 $black: black;
-$blue:#001186
+$blue:#001186;
+$border: #cdced9;
