--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -12,7 +12,7 @@
     padding-top: 5.5rem;
 
     @media only screen and (min-width: 1024px){
-        padding-bottom: 4.5rem;
+        // padding-bottom: 4.5rem;
         padding-top: 4.5rem;
         display: flex;
     }
@@ -30,7 +30,7 @@
             gap: 0;
             padding: 28px 64px 28px 0;
             margin-left: 40px;
-            border-right: 0.06rem solid lightslategrey;
+            border-right: 0.0625rem solid abstracts.$border;
         }
 
         @media only screen and (min-width: 1440px) {
@@ -75,7 +75,7 @@
         padding-top: 2.265rem;
         column-count: 2;
         margin: 0 20px;
-        border-top: 0.06rem solid lightslategrey;
+        border-top: 0.0625rem solid abstracts.$border;
 
         @media only screen and (min-width: 1024px){
             column-count: 3;
