--- a/styles/service.scss
+++ b/styles/service.scss
@@ -2,15 +2,6 @@
 @use './abstracts';
 
 
-.banner__image
-{
-    background: abstracts.$primary-blue url('https://www.specbee.com/themes/custom/specbee/assets/media/webp/billboard-bg-light.webp') no-repeat 50%;
-    background-size: cover;
-    background-blend-mode: multiply;
-    width: 100%;
-    height: 600px;
-}
-
 .service {
     background-color: abstracts.$primary-blue;
 
@@ -26,6 +17,7 @@
         justify-content: center;
         margin: 0 auto;
         position: relative;
+        margin-bottom: 30px;
 
         img {
             width: 6rem;
@@ -170,142 +162,6 @@
 
 }
 
-.container {
-    padding: 40px 275px;
-    color: black;
-    margin-top: 20px;
 
 
-    &__text__wrapper{
-        display: flex;
-    }
-    &__quote-icon {
-        fill: abstracts.$primary-blue;
-        width: 50px;
-    }
-    &__description {
-        font-size: 1.5rem;
-        padding-left: 10px;
-    }
-
-    &__name {
-        font-size: 1.75rem;
-        font-weight: bold;
-        margin-top: 50px;
-        margin-bottom: 0;
-        padding-left: 60px;
-    }
-
-    &__pos {
-        margin-top: 0;
-        padding-left: 60px;
-    }
-}
-.ideas__block {
-    background-color: abstracts.$primary-blue;
-    text-align: center;
-    padding: 80px;
-
-
-    &__text {
-        font-size: 2.25rem;
-        margin: 0;
-        line-height: 1.5;
-        color: abstracts.$white;
-    }
-
-    &__btn {
-        margin-top: 50px;
-
-    &-link {
-        // background-color: abstracts.$yellow;
-        // border: 0.0625rem solid abstracts.$yellow;
-        // color: abstracts.$primary-blue;
-        // text-decoration: none;
-        // padding: 8px 30px;
-        // font-weight: bold;
-        // font-size: 12px;
-        // border-radius: 4px;
-        @include abstracts.button;
-
-        &:hover {
-            background-color: abstracts.$primary-blue;
-            border: 1px solid abstracts.$yellow;
-        }
-    }
-    &-text {
-        text-decoration: none;
-
-        &:hover {
-            color: abstracts.$yellow;
-            background-color: abstracts.$primary-blue;
-        }
-
-
-    }
-    }
-    @media only screen and (max-width: 768px) {
-        background-color: abstracts.$primary-blue;
-        text-align: center;
-        padding: 40px 0;
-
-        &__text {
-            font-size: 45px;
-            margin: 0;
-            line-height: 1;
-            color: abstracts.$white;
-    }
-    &__btn-link {
-        padding: 10px 30px;
-    }
-    &__text {
-        font-size: 3.25rem;
-    }
-}
-
-
-
-
-@media only screen and (max-width: 425px){
-    &__text {
-    font-size: 2.25rem;
-}
-}
-
-}
-
-@media only screen and (max-width: 768px){
-.container {
-    padding: 40px 20px;
-
-    &__description {
-        font-size: 1.2rem;
-    }
-
-    &__name {
-        font-size: 1.125rem;
-}
-&__pos {
-    margin-top: 0;
-    font-size: 0.8rem;
-
-}
-}
-}
-
-@media only screen and (max-width: 425px){
-    .container__text__wrapper {
-        flex-wrap: wrap;
-    }
-
-    .container__quote-icon{
-            width: 70px;
-        }
-        .container__name {
-        padding-left: 0;
-    }
-    .container__pos {
-    padding-left: 0;
-}
-}
 
