--- a/styles/crafting.scss
+++ b/styles/crafting.scss
@@ -13,6 +13,9 @@
         justify-content: space-between;
     }
 
+    @media screen and (min-width: 1326px) {
+        padding: 3.5rem 12.25rem;
+    }
 
         &:first-child {
             margin-bottom: 6rem;
