--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-   font-family: "Work Sans", sans-serif;
+    font-family: 'hanson', sans-serif;
 }
 
 .footer {
@@ -117,7 +117,7 @@
         margin-top: 50px;
 
         h3 {
-            margin-bottom: 20px;
+            margin-bottom: 16px;
             color: abstracts.$navy-blue-dark;
         }
         &-icon {
