--- a/styles/service.css
+++ b/styles/service.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Work Sans", sans-serif;
+  /* font-family: "Work Sans", sans-serif; */
 }
 
 p {
@@ -8,14 +8,6 @@ p {
 }
 p:last-child {
   margin-bottom: 0;
-}
-
-.banner__image {
-  background: #0020f6 url("https://www.specbee.com/themes/custom/specbee/assets/media/webp/billboard-bg-light.webp") no-repeat 50%;
-  background-size: cover;
-  background-blend-mode: multiply;
-  width: 100%;
-  height: 600px;
 }
 
 .service {
@@ -33,6 +25,7 @@ p:last-child {
   justify-content: center;
   margin: 0 auto;
   position: relative;
+  margin-bottom: 30px;
 }
 .service__image__wrapper img {
   width: 6rem;
@@ -82,6 +75,7 @@ p:last-child {
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 2.5rem;
+  padding-bottom: 20px;
 }
 .service__card {
   width: 30%;
@@ -150,123 +144,5 @@ p:last-child {
     width: 38px;
     position: absolute;
     left: 0;
-  }
-}
-
-.container {
-  padding: 40px 275px;
-  color: black;
-  margin-top: 20px;
-}
-.container__text__wrapper {
-  display: flex;
-}
-.container__quote-icon {
-  fill: #0020f6;
-  width: 50px;
-}
-.container__description {
-  font-size: 1.5rem;
-  padding-left: 10px;
-}
-.container__name {
-  font-size: 1.75rem;
-  font-weight: bold;
-  margin-top: 50px;
-  margin-bottom: 0;
-  padding-left: 60px;
-}
-.container__pos {
-  margin-top: 0;
-  padding-left: 60px;
-}
-
-.ideas__block {
-  background-color: #0020f6;
-  text-align: center;
-  padding: 80px;
-}
-.ideas__block__text {
-  font-size: 2.25rem;
-  margin: 0;
-  line-height: 1.5;
-  color: #fff;
-}
-.ideas__block__btn {
-  margin-top: 50px;
-}
-.ideas__block__btn-link {
-  background-color: #e3f307;
-  border: 0.0625rem solid #e3f307;
-  color: #0020f6;
-  text-decoration: none;
-  padding: 8px 30px;
-  font-weight: bold;
-  font-size: 12px;
-  border-radius: 4px;
-}
-.ideas__block__btn-link:hover {
-  background-color: #0020f6;
-  border: 1px solid #e3f307;
-}
-.ideas__block__btn-text {
-  text-decoration: none;
-}
-.ideas__block__btn-text:hover {
-  color: #e3f307;
-  background-color: #0020f6;
-}
-@media only screen and (max-width: 768px) {
-  .ideas__block {
-    background-color: #0020f6;
-    text-align: center;
-    padding: 40px 0;
-  }
-  .ideas__block__text {
-    font-size: 45px;
-    margin: 0;
-    line-height: 1;
-    color: #fff;
-  }
-  .ideas__block__btn-link {
-    padding: 10px 30px;
-  }
-  .ideas__block__text {
-    font-size: 3.25rem;
-  }
-}
-@media only screen and (max-width: 425px) {
-  .ideas__block__text {
-    font-size: 2.25rem;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .container {
-    padding: 40px 20px;
-  }
-  .container__description {
-    font-size: 1.2rem;
-  }
-  .container__name {
-    font-size: 1.125rem;
-  }
-  .container__pos {
-    margin-top: 0;
-    font-size: 0.8rem;
-  }
-}
-@media only screen and (max-width: 425px) {
-  .container__text__wrapper {
-    flex-wrap: wrap;
-  }
-  .container__quote-icon {
-    width: 70px;
-  }
-  .container__name {
-    padding-left: 0;
-  }
-  .container__pos {
-    padding-left: 0;
   }
 }/*# sourceMappingURL=service.css.map */
