--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,2 +1,14 @@
+@import 'components/banner';
+@import 'components/container';
+@import 'components/crafting';
+@import 'components/ideas';
+@import 'components/insights';
+@import 'components/mixandmatch';
+@import 'components/ourwork';
+@import 'components/service';
+@import 'components/standing';
+@import 'components/service-block';
+
+
 @import 'layout/footer';
-@import 'layout/header'
+@import 'layout/header';
