--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,920 @@
+.banner__image {
+  background: #0020f6 url("https://www.specbee.com/themes/custom/specbee/assets/media/webp/billboard-bg-light.webp") no-repeat 50%;
+  background-size: cover;
+  background-blend-mode: multiply;
+  width: 100%;
+}
+.banner__wrapper {
+  padding: 0 20px;
+  margin-bottom: 5rem;
+}
+.banner-head {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  color: #fff;
+  padding-top: 3.5rem;
+  text-transform: uppercase;
+  line-height: 1;
+}
+.banner-text {
+  color: #fff;
+  margin: 0 auto 1.75rem;
+}
+.banner-btn {
+  margin-top: 3.5rem;
+}
+.banner-link {
+  background-color: #e3f307;
+  border: 0.0625rem solid #e3f307;
+  color: #0020f6;
+  text-decoration: none;
+  padding: 8px 40px;
+  font-weight: bold;
+  font-size: 12px;
+  border-radius: 4px;
+  letter-spacing: 2px;
+}
+.banner-link:hover {
+  background-color: #0020f6;
+  border: 1px solid #e3f307;
+  color: #e3f307;
+}
+.banner__pic img {
+  max-width: 100%;
+}
+.banner__title-sec {
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1rem;
+  padding-bottom: 1rem;
+  letter-spacing: 0.125rem;
+}
+.banner__title-sec::after {
+  background-color: #e3f307;
+  content: "";
+  display: block;
+  height: 0.3125rem;
+  left: 50%;
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 3.75rem;
+}
+.banner-slider img {
+  width: 200px;
+}
+
+.container {
+  padding: 0 20px;
+  padding-top: 56px;
+  padding-bottom: 84px;
+  color: #fff;
+  margin: 20px 0;
+  background: #0020f6;
+}
+@media only screen and (min-width: 768px) {
+  .container {
+    padding: 0 50px;
+    padding-top: 64px;
+    padding-bottom: 111px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .container {
+    padding-bottom: 152px;
+  }
+}
+@media only screen and (min-width: 1326px) {
+  .container {
+    padding-right: 250px;
+    padding-left: 250px;
+  }
+}
+.container__text__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+@media only screen and (min-width: 768px) {
+  .container__text__wrapper {
+    flex-wrap: nowrap;
+  }
+}
+.container__quote-icon {
+  fill: #e3f307;
+  width: 80px;
+}
+@media only screen and (min-width: 768px) {
+  .container__quote-icon {
+    width: 60px;
+    margin-right: 20px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .container__quote-icon {
+    width: 75px;
+  }
+}
+.container__description {
+  font-size: 1rem;
+  margin-top: 20px;
+  line-height: 1.25;
+}
+@media only screen and (min-width: 768px) {
+  .container__description {
+    font-size: 1.5rem;
+    line-height: 1.25;
+  }
+}
+.container__name {
+  font-size: 1.125rem;
+  font-weight: bold;
+  margin-top: 50px;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+@media only screen and (min-width: 768px) {
+  .container__name {
+    font-size: 1.75rem;
+    padding-left: 75px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .container__name {
+    padding-left: 90px;
+  }
+}
+.container__pos {
+  margin-top: 0;
+  font-size: 0.75rem;
+  padding-left: 0;
+}
+@media only screen and (min-width: 768px) {
+  .container__pos {
+    font-size: 1rem;
+    padding-left: 75px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .container__pos {
+    padding-left: 90px;
+  }
+}
+
+.descontainer {
+  background-color: #fff;
+  color: black;
+}
+
+.des__container__quote-icon {
+  fill: #001186;
+}
+
+body {
+  margin: 0;
+  font-family: "hanson", sans-serif;
+}
+
+p {
+  margin-bottom: 2.5rem;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+.crafting {
+  padding: 3.5rem 1.25rem;
+  box-sizing: border-box;
+}
+.crafting__item {
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 768px) {
+  .crafting__item {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .crafting__item {
+    padding: 3.5rem 12.25rem;
+  }
+}
+.crafting__item:first-child {
+  margin-bottom: 6rem;
+}
+@media screen and (min-width: 768px) {
+  .crafting__item {
+    flex-direction: row;
+  }
+  .crafting__item:nth-child(2) {
+    flex-direction: row-reverse;
+  }
+}
+.crafting__img img {
+  max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .crafting__img {
+    width: 48%;
+  }
+}
+.crafting__content {
+  margin-top: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .crafting__content {
+    width: 48%;
+  }
+}
+.crafting__content__title {
+  font-size: 1.25rem;
+  line-height: 1.25;
+  margin-bottom: 1.25rem;
+  text-transform: uppercase;
+  color: #001186;
+}
+@media screen and (min-width: 768px) {
+  .crafting__content__title {
+    font-size: 1.5rem;
+  }
+}
+.crafting__content__text p {
+  font-size: 1rem;
+  line-height: 1.65;
+}
+
+.ideas__block {
+  background-color: #0020f6;
+  text-align: center;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+.ideas__block__text {
+  font-size: 1.375rem;
+  font-weight: bold;
+  margin: 0;
+  line-height: 1.5;
+  color: #fff;
+}
+.ideas__block__btn {
+  margin-top: 50px;
+}
+.ideas__block__btn-link {
+  background-color: #e3f307;
+  border: 0.0625rem solid #e3f307;
+  color: #0020f6;
+  text-decoration: none;
+  padding: 8px 40px;
+  font-weight: bold;
+  font-size: 12px;
+  border-radius: 4px;
+  letter-spacing: 2px;
+}
+.ideas__block__btn-link:hover {
+  background-color: #0020f6;
+  border: 1px solid #e3f307;
+  color: #e3f307;
+}
+.ideas__block__btn-text {
+  text-decoration: none;
+}
+.ideas__block__btn-text:hover {
+  color: #e3f307;
+  background-color: #0020f6;
+}
+@media only screen and (min-width: 768px) {
+  .ideas__block__text {
+    font-size: 2.25rem;
+  }
+  .ideas__block__btn-link {
+    padding: 10px 30px;
+  }
+}
+.insights {
+  background-color: #0020f6;
+  padding-top: 128px;
+}
+.insights__heading {
+  color: #fff;
+  font-size: 2rem;
+  font-weight: bold;
+}
+@media screen and (min-width: 768px) {
+  .insights__heading {
+    font-size: 2.8125rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .insights__heading {
+    font-size: 4.0625rem;
+    padding: 0 20px;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .insights__heading {
+    padding: 0;
+    margin-left: -20px;
+  }
+}
+.insights__heading::before {
+  content: "";
+  height: 0.75rem;
+  width: 35px;
+  display: inline-block;
+  margin-bottom: 15px;
+  vertical-align: middle;
+  margin-right: 1rem;
+  background-color: #e3f307;
+}
+@media screen and (min-width: 1024px) {
+  .insights__heading::before {
+    display: none;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .insights__heading::before {
+    content: "";
+    height: 0.75rem;
+    width: 80px;
+    display: inline-block;
+    margin-bottom: 15px;
+    vertical-align: middle;
+    margin-right: 3rem;
+    background-color: #e3f307;
+  }
+}
+.insights__text {
+  color: #fff;
+  font-size: 1rem;
+  line-height: 1.65;
+  padding: 40px 20px;
+}
+@media screen and (min-width: 1024px) {
+  .insights__text {
+    width: 560px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .insights__text {
+    padding: 0 120px;
+    margin-bottom: 70px;
+    margin-top: 30px;
+    width: 630px;
+    font-size: 1.125rem;
+  }
+}
+.insights__wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+  padding-bottom: 3.5rem;
+}
+@media screen and (min-width: 1024px) {
+  .insights__wrapper {
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .insights__wrapper {
+    padding: 0 120px;
+  }
+}
+.insights__cards {
+  background-color: #fff;
+  margin-bottom: 20px;
+}
+.insights__cards img {
+  width: 100%;
+}
+@media screen and (min-width: 1024px) {
+  .insights__cards {
+    overflow: hidden;
+  }
+}
+.insights__cards:hover {
+  cursor: pointer;
+}
+.insights__cards:hover img {
+  transform: scale(1.2);
+  transition: all 0.25s ease-in-out;
+}
+.insights__content {
+  padding: 20px;
+}
+.insights__title {
+  color: #0020f6;
+  position: relative;
+  width: 80%;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+@media screen and (min-width: 1024px) {
+  .insights__title {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .insights__title {
+    width: 280px;
+  }
+}
+.insights__title::after {
+  position: absolute;
+  content: "";
+  height: 0.25rem;
+  width: 70px;
+  display: inline-block;
+  right: -88px;
+  top: 5%;
+  background-color: #e3f307;
+}
+@media screen and (min-width: 768px) {
+  .insights__title::after {
+    right: -154px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .insights__title::after {
+    right: -94px;
+  }
+}
+@media screen and (min-width: 1326px) {
+  .insights__title::after {
+    right: -90px;
+  }
+}
+.insights__desc {
+  font-size: 12px;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.mixandmatch {
+  background-color: #0020f6;
+  margin-bottom: 10px;
+  padding-top: 6rem;
+  position: relative;
+}
+.mixandmatch__desc {
+  padding-bottom: 4rem;
+  max-width: 40rem;
+  margin-left: 225px;
+  color: #fff;
+  font-size: 1.125rem;
+  line-height: 1.65;
+}
+.mixandmatch__heading {
+  font-size: 4.0625rem;
+  color: #fff;
+  margin-left: 225px;
+  padding-bottom: 4rem;
+}
+.mixandmatch__heading:before {
+  background-color: #e3f307;
+  content: "";
+  height: 0.625rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  position: absolute;
+  top: 120px;
+  left: 0;
+  width: 10rem;
+}
+
+.accordion {
+  padding-bottom: 4rem;
+  padding-top: 4rem;
+}
+.accordion__wrapper {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  justify-content: center;
+  gap: 3.5rem;
+}
+.accordion__item {
+  border-top: 0.0625rem solid #fff;
+  width: 35rem;
+}
+.accordion__item.active .accordion__title::after {
+  display: none;
+}
+.accordion__item:last-child {
+  border-bottom: 0.0625rem solid #fff;
+}
+.accordion__title {
+  background-color: #0020f6;
+  padding: 16px 40px 16px 0;
+  cursor: pointer;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 800;
+  position: relative;
+}
+.accordion__title::before {
+  background: #fff;
+  content: "";
+  height: 0.25rem;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transition: all 0.25s ease-in-out;
+  width: 1rem;
+}
+.accordion__title::after {
+  background: #fff;
+  content: "";
+  height: 0.25rem;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transition: all 0.25s ease-in-out;
+  transform: rotate(90deg);
+  width: 1rem;
+}
+.accordion__content {
+  overflow: hidden;
+  max-height: 0;
+  color: #fff;
+}
+.accordion__content.show {
+  max-height: 500px;
+  padding-bottom: 2.5rem;
+}
+.accordion__content p {
+  font-size: 1.125rem;
+  line-height: 2;
+}
+.accordion__content li {
+  font-size: 1.125rem;
+  line-height: 2;
+}
+
+.ourwork__card {
+  width: 35%;
+  position: relative;
+}
+.ourwork__card__info {
+  display: none;
+}
+.ourwork__img img {
+  max-width: 100%;
+}
+.ourwork__content {
+  position: absolute;
+  bottom: 30px;
+  color: #fff;
+}
+.ourwork__title {
+  padding-right: 6.5rem;
+  font-size: 1.5rem;
+  line-height: 1.25rem;
+}
+
+body {
+  margin: 0;
+  font-family: "hanson", sans-serif;
+}
+
+p {
+  margin-bottom: 2.5rem;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+.service {
+  background-color: #0020f6;
+}
+.service__image__wrapper {
+  background-image: url("https://www.specbee.com/themes/custom/specbee/assets/media/icons/polygon.svg");
+  background-repeat: no-repeat;
+  height: 15rem;
+  width: 15rem;
+  background-position-x: 50%;
+  background-position-y: center;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom: 30px;
+}
+.service__image__wrapper img {
+  width: 6rem;
+  transition: transform 0.35s ease-in-out;
+}
+.service__image__wrapper:hover img {
+  transform: scale(0.85);
+}
+.service__image__wrapper:before {
+  background: url("https://www.specbee.com/themes/custom/specbee/assets/media/icons/polygon-line.svg") no-repeat 50%/contain;
+  content: "";
+  height: 17.5rem;
+  left: -1.1875rem;
+  position: absolute;
+  top: -1.125rem;
+  width: 17.5rem;
+  transform: scale(0.5);
+  z-index: -1;
+  transition: all 0.25s ease-in-out;
+}
+.service__image__wrapper:hover:before {
+  transform: scale(1);
+  z-index: 0;
+}
+.service__heading {
+  margin-top: 0;
+  font-size: 5rem;
+  padding-top: 5rem;
+  color: #fff;
+  margin-bottom: 0;
+}
+.service__heading::before {
+  content: "";
+  height: 0.75rem;
+  width: 150px;
+  display: inline-block;
+  margin-bottom: 15px;
+  vertical-align: middle;
+  margin-right: 50px;
+  background-color: #e3f307;
+}
+.service__wrapper {
+  max-width: 65rem;
+  padding-top: 50px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 2.5rem;
+  padding-bottom: 20px;
+}
+.service__card {
+  width: 30%;
+  text-align: center;
+  color: #fff;
+  position: relative;
+}
+.service__title {
+  font-size: 1.25rem;
+  font-weight: 800;
+}
+.service__title a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.service__text {
+  font-size: 0.875rem;
+}
+@media only screen and (max-width: 1024px) {
+  .service__heading {
+    width: 10px;
+    margin-left: 15px;
+  }
+  .service__heading::before {
+    display: none;
+  }
+  .service__heading__wrapper {
+    padding-top: 0;
+    margin: 0 10px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .service__heading {
+    font-size: 4rem;
+    width: 100%;
+    margin-left: 0;
+  }
+  .service__heading::before {
+    display: inline-block;
+    margin-right: 20px;
+    width: 50px;
+  }
+  .service__wrapper {
+    gap: 3.5rem;
+    margin: 0px 20px;
+    padding-top: 0;
+  }
+  .service__card {
+    width: 46%;
+  }
+  .service__text {
+    padding: 0px 50px;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .service__card {
+    width: 100%;
+  }
+  .service__heading {
+    font-size: 2rem;
+    width: 20px;
+    margin-left: 50px;
+  }
+  .service__heading::before {
+    width: 38px;
+    position: absolute;
+    left: 0;
+  }
+}
+
+.standingout__heading {
+  font-size: 5rem;
+  padding-top: 5rem;
+  color: #0020f6;
+  margin-bottom: 0;
+}
+.standingout__heading::before {
+  content: "";
+  height: 0.75rem;
+  width: 140px;
+  display: inline-block;
+  margin-bottom: 15px;
+  vertical-align: middle;
+  margin-right: 30px;
+  background-color: #e3f307;
+}
+.standingout__wrapper {
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 50px;
+  max-width: 60rem;
+  margin: 0 auto;
+  padding-bottom: 3.5rem;
+}
+.standingout__item {
+  width: 30%;
+  background-color: #f8f9fa;
+  position: relative;
+  padding-bottom: 25px;
+}
+.standingout__item:hover .standingout__content {
+  height: 100%;
+  box-shadow: 0px 3px 35px 0 rgba(0, 0, 0, 0.08);
+}
+.standingout__item img {
+  width: 100%;
+  height: 300px;
+}
+.standingout__content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  background-color: #f5f5f5;
+  width: 100%;
+  transition: all 0.4s ease-in-out;
+  height: 6rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
+.standingout__title {
+  color: #0020f6;
+  padding-right: inherit;
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-top: 8px;
+  margin-bottom: -10px;
+  padding: 0 20px;
+}
+.standingout__title::after {
+  background-color: #0020f6;
+  content: "";
+  height: 0.25rem;
+  position: absolute;
+  right: 0;
+  width: 3rem;
+}
+.standingout__description {
+  margin-top: 16px;
+  padding: 0 20px;
+}
+@media only screen and (max-width: 768px) {
+  .standingout__heading {
+    font-size: 3.125rem;
+  }
+  .standingout__heading::before {
+    width: 50px;
+    margin-right: 10px;
+  }
+  .standingout__item {
+    width: 42%;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .standingout__item {
+    width: 75%;
+  }
+  .standingout__heading {
+    font-size: 2.125rem;
+    margin-left: 50px;
+    position: relative;
+    width: 20px;
+  }
+  .standingout__heading::before {
+    width: 38px;
+    position: absolute;
+    top: 100px;
+    left: -50px;
+  }
+}
+
+.destandingout {
+  background-color: #0020f6;
+}
+.destandingout__heading {
+  color: #fff;
+}
+
+body {
+  margin: 0;
+  font-family: "hanson", sans-serif;
+}
+
+p {
+  margin-bottom: 2.5rem;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+.service-con {
+  padding: 3.5rem 1.25rem;
+  box-sizing: border-box;
+}
+.service-con__block {
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 768px) {
+  .service-con__block {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1349px) {
+  .service-con__block {
+    padding: 3.5rem 8.25rem;
+  }
+}
+.service-con__block:first-child {
+  margin-bottom: 6rem;
+}
+@media screen and (min-width: 768px) {
+  .service-con__block {
+    flex-direction: row-reverse;
+  }
+  .service-con__block:nth-child(2) {
+    flex-direction: row;
+  }
+}
+.service-con__img img {
+  max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .service-con__img {
+    width: 48%;
+  }
+}
+.service-con__content {
+  margin-top: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .service-con__content {
+    width: 48%;
+  }
+}
+.service-con__content__title {
+  font-size: 1.25rem;
+  line-height: 1.25;
+  margin-bottom: 1.25rem;
+  text-transform: uppercase;
+  color: #001186;
+}
+@media screen and (min-width: 768px) {
+  .service-con__content__title {
+    font-size: 1.5rem;
+  }
+}
+.service-con__content__text p {
+  font-size: 1rem;
+  line-height: 1.65;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -33,10 +950,10 @@
     border-right: 0.0625rem solid #cdced9;
   }
 }
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1349px) {
   .footer-menu__left {
-    width: 350px;
-    justify-content: space-between;
+    width: 25%;
+    gap: 2rem;
   }
 }
 .footer-menu__right {
@@ -46,6 +963,11 @@
   .footer-menu__right {
     gap: 0;
     padding: 28px 28px 0px 78px;
+  }
+}
+@media only screen and (min-width: 1349px) {
+  .footer-menu__right {
+    padding: 0;
   }
 }
 .footer-menu__item {
@@ -80,6 +1002,11 @@
     border: none;
   }
 }
+@media only screen and (min-width: 1349px) {
+  .footer__locations {
+    margin: 0 40px;
+  }
+}
 .footer__locations__title {
   color: rgb(0, 17, 134);
   font-size: 1rem;
@@ -110,6 +1037,11 @@
   padding: 0px 40px;
   margin-top: 50px;
 }
+@media only screen and (min-width: 1349px) {
+  .footer__social {
+    margin-left: 20px;
+  }
+}
 .footer__social h3 {
   margin-bottom: 16px;
   color: rgb(0, 17, 134);
@@ -128,9 +1060,9 @@
   display: flex;
   flex-wrap: wrap;
 }
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1349px) {
   .footer__block__wrapper {
-    gap: 7.5rem;
+    gap: 3.5rem;
     flex-wrap: nowrap;
   }
 }
@@ -144,7 +1076,7 @@
     gap: 6%;
   }
 }
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1349px) {
   .footer__images {
     margin-top: -75px;
     width: 500px;
