--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -33,9 +33,9 @@
             border-right: 0.0625rem solid abstracts.$border;
         }
 
-        @media only screen and (min-width: 1440px) {
-            width: 350px;
-            justify-content: space-between;
+        @media only screen and (min-width: 1349px) {
+            width: 25%;
+            gap: 2rem;
         }
     }
     &-menu__right {
@@ -44,8 +44,12 @@
         @media only screen and (min-width: 1024px){
             gap: 0;
             padding: 28px 28px 0px 78px;
-
-        }
+            }
+            @media only screen and (min-width: 1349px){
+                // gap: 0;
+                // padding: 28px 28px 0px 38px;
+                padding: 0;
+            }
         }
 
     &-menu__item{
@@ -83,6 +87,10 @@
             border: none;
         }
 
+        @media only screen and (min-width: 1349px){
+            margin: 0 40px;
+        }
+
         &__title {
             color: abstracts.$navy-blue-dark;
             font-size: 1rem;
@@ -116,6 +124,11 @@
         padding: 0px 40px;
         margin-top: 50px;
 
+        @media only screen and (min-width: 1349px){
+            margin-left: 20px;
+        }
+
+
         h3 {
             margin-bottom: 16px;
             color: abstracts.$navy-blue-dark;
@@ -140,8 +153,8 @@
         display: flex;
         flex-wrap: wrap;
 
-        @media only screen and (min-width: 1440px) {
-            gap: 7.5rem;
+        @media only screen and (min-width: 1349px) {
+            gap: 3.5rem;
             flex-wrap: nowrap;
         }
 
@@ -155,7 +168,7 @@
         gap: 6%;
     }
 
-    @media only screen and (min-width: 1440px) {
+    @media only screen and (min-width: 1349px) {
         margin-top: -75px;
         width: 500px;
         justify-content: space-between;
